styling and minor changes to ui

--- a/src/scss/info.scss
+++ b/src/scss/info.scss
@@ -12,7 +12,7 @@
 .intro-header {
     background-color: #0A192F;
     font-family: fantasy, Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 4em;
+    font-size: 4em !important;
 }
 
 .intro-text {
