--- a/src/scss/info.scss
+++ b/src/scss/info.scss
@@ -7,7 +7,7 @@
     justify-content: center;
     border-radius: 10px ;
     margin-top: auto;
-    background-color: #0A192F ;
+    background-color: #0A192F !important;
 }
 .intro-header {
     background-color: #0A192F;
