--- a/src/scss/projects.scss
+++ b/src/scss/projects.scss
@@ -77,19 +77,25 @@
         }
     }
 }
+.experience-section {
+    order: -1;
+}
+
 @media (max-width: 600px) {
     .projects-container {
         flex-direction: column;
         padding: 1rem;
+        align-items: center;
     }
 
     .experience-section {
         padding: 2rem 1rem;
+        text-align: center;
 
         .section-title {
-            font-size: 2rem;
+            font-size: 1.5rem;
             flex-direction: column;
-            align-items: flex-start;
+            align-items: center;
 
             .icon {
                 margin-right: 0;
@@ -105,15 +111,15 @@
             padding: 1rem;
 
             .company-name {
-                font-size: 1.2rem;
-            }
-
-            .role {
                 font-size: 1rem;
             }
 
-            .duration {
+            .role {
                 font-size: 0.9rem;
+            }
+
+            .duration {
+                font-size: 0.8rem;
             }
 
             .responsibilities {
