--- a/src/scss/info.scss
+++ b/src/scss/info.scss
@@ -11,7 +11,7 @@
 }
 .intro-header {
     background-color: #0A192F;
-    font-family: fantasy, Verdana, Geneva, Tahoma, sans-serif;
+    font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 4em !important;
 }
 
