--- a/src/scss/root.scss
+++ b/src/scss/root.scss
@@ -52,7 +52,7 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
-    width: 100%;
+    size: 100px;
     background-color: #0A192F;
   }
   
