--- a/src/scss/projects.scss
+++ b/src/scss/projects.scss
@@ -44,13 +44,27 @@
     .experience-card {
         background:  #0A192F;
         border-radius: 8px;
-        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        box-shadow: 0 4px 6px rgba(144, 138, 138, 0.1);
         padding: 2rem;
 
         .company-name {
             font-size: 1.5rem;
             font-weight: bold;
             color: white;
+        }
+
+        .company-logo-container {
+            display: flex;
+            align-items: center;
+            gap: 1rem;
+            margin-bottom: 1rem;
+        }
+
+        .company-logo {
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            background-color: white;
         }
 
         .role {
@@ -91,6 +105,7 @@
     .experience-section {
         padding: 2rem 1rem;
         text-align: center;
+        box-shadow: none;
 
         .section-title {
             font-size: 1.5rem;
